fix: improve UI consistency and fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,18 @@
   padding-bottom: 10rem;
 }
 
+.bg-login {
+  background-image: url("../src/assets/images/Background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 30px 50px;
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 100vh;
+
+  padding-bottom: 10rem;
+}
+
 .nav {
   width: 100%;
   height: 3rem;
@@ -96,4 +108,17 @@
 .roundimg {
   padding-top: 1rem;
   color: #a9abb3;
+}
+
+.active {
+  color: #00e3fd;
+}
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px black inset !important;
+}
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px black inset !important;
+  -webkit-text-fill-color: white !important; /* text bhi white rakhne ke liye */
 }
